# product-research-platform

./: .gitignore  docker-compose.cpu.yml  docker-compose.yml
catalog-service/: .dockerignore  .env.example  README.md  pyproject.toml
catalog-service/alembic/: env.py
catalog-service/alembic/versions/: 0001_baseline.py  0002_outbox_relay.py
catalog-service/catalog_service/: __init__.py  __main__.py  bootstrap.py  main.py
catalog-service/catalog_service/application/: __init__.py  _translate.py  event_mapping.py  exceptions.py  outbox_message.py  price_analysis.py
catalog-service/catalog_service/application/dto/: __init__.py  commands.py  queries.py  seed.py  views.py
catalog-service/catalog_service/application/ports/: __init__.py  csv_row_source.py  outbox.py  read_models.py  repositories.py  services.py  uow.py
catalog-service/catalog_service/application/use_cases/: __init__.py  create_product.py  delete_product.py  seed_catalog.py  set_stock.py  update_commercial_data.py  update_metrics.py  update_product_content.py
catalog-service/catalog_service/domain/: __init__.py  events.py  exceptions.py
catalog-service/catalog_service/domain/entities/: __init__.py  product.py  reference.py
catalog-service/catalog_service/domain/value_objects/: __init__.py  currency.py  identifiers.py  margin.py  metrics.py  money.py  pricing.py  rating.py  references.py  sku.py  stock.py
catalog-service/catalog_service/infrastructure/: __init__.py  config.py
catalog-service/catalog_service/infrastructure/csv/: __init__.py  csv_row_source.py
catalog-service/catalog_service/infrastructure/db/: __init__.py  base.py  engine.py  mappers.py  models.py  unit_of_work.py
catalog-service/catalog_service/infrastructure/messaging/: __init__.py  broker.py
catalog-service/catalog_service/infrastructure/outbox/: __init__.py  relay.py
catalog-service/catalog_service/infrastructure/services/: __init__.py  clock.py  id_generator.py
catalog-service/catalog_service/presentation/: __init__.py
catalog-service/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
catalog-service/tests/integration/: conftest.py  test_outbox_relay.py  test_persistence.py  test_query_service.py  test_seed_e2e.py
catalog-service/tests/support/: factories.py  fakes.py
catalog-service/tests/unit/: test_composition.py
e2e/: Dockerfile  pyproject.toml
e2e/doubles/: __init__.py  app.py  llm.py  web.py
e2e/tests/unit/: test_doubles.py
embedding-service/: .dockerignore  .env.example  README.md  docker-compose.yml  pyproject.toml
embedding-service/contracts/proto/: generate.sh
embedding-service/docker/: Dockerfile.cpu  Dockerfile.gpu  entrypoint.sh
embedding-service/embedding_service/: __init__.py  __main__.py  bootstrap.py  main.py
embedding-service/embedding_service/application/: __init__.py  exceptions.py
embedding-service/embedding_service/domain/: __init__.py  exceptions.py
embedding-service/embedding_service/infrastructure/: __init__.py  config.py  reranker_config.py
embedding-service/embedding_service/presentation/: __init__.py
embedding-service/tests/: test_smoke.py
embedding-service/tests/contract/: test_proto.py  test_rabbitmq_schemas.py  test_reranker_proto.py
embedding-service/tests/performance/: test_reranker_perf.py
embedding-service/tests/support/: fakes.py
indexing-service/: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
indexing-service/alembic/: env.py
indexing-service/alembic/versions/: 0001_baseline.py  0002_reindex_epoch.py
indexing-service/contracts/consumer/: envelope.schema.json
indexing-service/contracts/samples/: commercial_data_changed.json  content_changed.json  created.json  deleted.json
indexing-service/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
indexing-service/indexing_service/: __init__.py  __main__.py  bootstrap.py
indexing-service/indexing_service/application/: __init__.py  chunk_identity.py  document_builder.py  embedding_command.py  exceptions.py  indexer.py  outbox_message.py  payload.py  request_id.py
indexing-service/indexing_service/domain/: __init__.py  exceptions.py
indexing-service/indexing_service/infrastructure/: __init__.py  config.py
indexing-service/indexing_service/presentation/: __init__.py
indexing-service/indexing_service/tools/: __init__.py  fake_embedding_service.py
indexing-service/tests/contract/: test_embedding_contract.py  test_event_contract.py
indexing-service/tests/integration/: conftest.py  test_batch_qdrant.py  test_catalog_cutover_e2e.py  test_consumer_rabbit.py  test_embedding_sink_qdrant.py  test_jobs_persistence.py  test_outbox_relay.py  test_qdrant_roundtrip.py  test_request_embedding_pg.py  test_result_consumer_e2e.py
indexing-service/tests/support/: fakes.py
research-agent-service/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
research-agent-service/alembic/: env.py
research-agent-service/alembic/versions/: 0001_baseline.py
research-agent-service/contracts/proto/: generate.sh
research-agent-service/docker/: Dockerfile  entrypoint.sh
research-agent-service/research_agent_service/: __init__.py  __main__.py  bootstrap.py  main.py
research-agent-service/research_agent_service/application/: __init__.py  event_mapping.py  exceptions.py  outbox_message.py
research-agent-service/research_agent_service/domain/: __init__.py  exceptions.py  policies.py
research-agent-service/research_agent_service/infrastructure/: __init__.py  config.py
research-agent-service/research_agent_service/presentation/: __init__.py
research-agent-service/tests/: conftest.py
research-agent-service/tests/contract/: test_event_contracts.py
research-agent-service/tests/e2e/: test_query_path.py
research-agent-service/tests/integration/: conftest.py  test_migrations.py  test_outbox_relay.py  test_persistence.py  test_rabbitmq_publisher.py
research-agent-service/tests/support/: fakes.py
research-agent-service/tests/unit/: test_composition_root_smoke.py  test_layers.py
(+529 files in other folders)
