[project]
name = "catalog-service"
version = "0.1.0"
description = "Система-источник истины товарного каталога для платформы исследования товаров"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "faststream[rabbit]>=0.5",
    "typer>=0.12",
    "jsonschema>=4.22",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-randomly>=3.15",
    "ruff>=0.13",
    "import-linter>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["catalog_service"]

# --- Линт/формат ---
[tool.ruff]
target-version = "py312"
# Google Python Style Guide — максимум 80 символов в строке.
line-length = 80

[tool.ruff.lint]
# E/F — pyflakes+pycodestyle, I — isort, UP — pyupgrade, B — bugbear,
# TID — запрет «чужих» импортов по слоям, ASYNC, RUF — ruff-специфичные.
select = ["E", "F", "I", "UP", "B", "TID", "ASYNC", "RUF"]
# RUF001-003 — «неоднозначные» кириллические символы: проект русскоязычный,
# докстринги и комментарии на русском намеренно.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"sqlalchemy".msg = "Домен/приложение не знают ORM — импорт только в infrastructure."
"fastapi".msg = "HTTP — только presentation."
"faststream".msg = "Брокер — только infrastructure/presentation.messaging."
"pydantic".msg = "Pydantic — только presentation.schemas и infrastructure.config."

[tool.ruff.lint.per-file-ignores]
# Инфраструктуре можно ORM/драйверы/pydantic-settings (снимаем banned-api).
"catalog_service/infrastructure/**" = ["TID251"]

# --- Тесты ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: требует Postgres (testcontainers)",
    "contract: контрактные тесты событий/API",
    "slow: длительные (relay-конкуренция)",
]

[tool.coverage.run]
branch = true
source = ["catalog_service"]
omit = ["*/alembic/*", "catalog_service/main.py", "catalog_service/bootstrap.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true

# --- Правило зависимостей Clean Architecture (исполняемый инвариант) ---
[tool.importlinter]
root_package = "catalog_service"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "domain не знает фреймворков и внешних слоёв"
type = "forbidden"
source_modules = ["catalog_service.domain"]
forbidden_modules = [
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "fastapi",
    "faststream",
    "pydantic",
]

[[tool.importlinter.contracts]]
name = "application не знает фреймворков"
type = "forbidden"
source_modules = ["catalog_service.application"]
forbidden_modules = [
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "fastapi",
    "faststream",
    "pydantic",
]

[[tool.importlinter.contracts]]
name = "слои направлены внутрь (application -> domain)"
type = "layers"
layers = [
    "catalog_service.application",
    "catalog_service.domain",
]
