[project]
name = "indexing-service"
version = "0.1.0"
description = "Построитель поисковой read-model (Qdrant) для платформы исследования товаров"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "qdrant-client>=1.12",
    "httpx>=0.27",
    "faststream[rabbit]>=0.6",
    "typer>=0.12",
]

[project.optional-dependencies]
# Тяжёлый in-process эмбеддер (тянет torch) — опционально; за портом EmbeddingModel.
# Для тестов и remote-режима не нужен.
embedding = [
    "FlagEmbedding>=1.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-randomly>=3.15",
    "ruff>=0.13",
    "import-linter>=2.1",
    "testcontainers>=4.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["indexing_service"]

# --- Линт/формат ---
[tool.ruff]
target-version = "py312"
# Google Python Style Guide — максимум 80 символов в строке.
line-length = 80

[tool.ruff.lint]
# E/F — pyflakes+pycodestyle, I — isort, UP — pyupgrade, B — bugbear,
# TID — запрет «чужих» импортов по слоям, ASYNC, RUF — ruff-специфичные.
select = ["E", "F", "I", "UP", "B", "TID", "ASYNC", "RUF"]
# RUF001-003 — «неоднозначные» кириллические символы: проект русскоязычный,
# докстринги и комментарии на русском намеренно.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.flake8-bugbear]
# DI-идиома FastStream/FastAPI: вызов Context/Depends в дефолтах аргументов
# обязателен фреймворком — это не мутабельный дефолт (B008).
extend-immutable-calls = [
    "faststream.Context",
    "faststream.Depends",
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"qdrant_client".msg = "Векторное хранилище — только infrastructure."
"faststream".msg = "Брокер — только infrastructure/presentation.messaging."
"FlagEmbedding".msg = "Эмбеддер — только infrastructure.embedding."
"fastembed".msg = "Эмбеддер — только infrastructure.embedding."
"httpx".msg = "HTTP-клиент — только infrastructure."
"fastapi".msg = "HTTP — только presentation.api."
"pydantic".msg = "Pydantic — только presentation.schemas и infrastructure.config."

[tool.ruff.lint.per-file-ignores]
# Инфраструктуре, presentation и тестам можно фреймворки/клиенты.
"indexing_service/infrastructure/**" = ["TID251"]
"indexing_service/presentation/**" = ["TID251"]
# Composition root легально пересекает слои (проводка адаптеров).
"indexing_service/bootstrap.py" = ["TID251"]
"indexing_service/main.py" = ["TID251"]
"tests/**" = ["TID251"]

# --- Тесты ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: требует Qdrant/RabbitMQ (testcontainers)",
    "contract: контрактные тесты событий/схемы коллекции",
    "slow: длительные (реальный BGE-M3, relay-конкуренция)",
]

[tool.coverage.run]
branch = true
source = ["indexing_service"]
# Composition root и runtime-обвязка (проводка/запуск) проверяются e2e/
# вручную и через docker-compose, а не unit-тестами.
omit = [
    "indexing_service/__main__.py",
    "indexing_service/main.py",
    "indexing_service/bootstrap.py",
    "indexing_service/presentation/messaging/consumer_app.py",
    "indexing_service/presentation/cli/*",
    "indexing_service/presentation/api/app.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

# --- Правило зависимостей Clean Architecture (исполняемый инвариант) ---
[tool.importlinter]
root_package = "indexing_service"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "domain не знает фреймворков и внешних слоёв"
type = "forbidden"
source_modules = ["indexing_service.domain"]
forbidden_modules = [
    "qdrant_client",
    "faststream",
    "FlagEmbedding",
    "fastembed",
    "httpx",
    "fastapi",
    "pydantic",
]

[[tool.importlinter.contracts]]
name = "application не знает фреймворков"
type = "forbidden"
source_modules = ["indexing_service.application"]
forbidden_modules = [
    "qdrant_client",
    "faststream",
    "FlagEmbedding",
    "fastembed",
    "httpx",
    "fastapi",
    "pydantic",
]

[[tool.importlinter.contracts]]
name = "слои направлены внутрь (application -> domain)"
type = "layers"
layers = [
    "indexing_service.application",
    "indexing_service.domain",
]
